# todo-cli

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  todo
todo_cli/: main.py
todo_cli/core/: models.py  storage.py  utils.py
todo_cli/services/: slack_service.py  sync_service.py
todo_cli/views/: list_view.py  summary_view.py
