[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "todo-cli"
version = "0.1.0"
description = "Slack連携Todo管理CLI（Phase 1: MVP - ローカル管理のみ）"
authors = [{name = "Kento Sobayashi"}]
requires-python = ">=3.9"
dependencies = [
    "typer>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
todo = "todo_cli.main:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=todo_cli --cov-report=term-missing"

[tool.coverage.run]
source = ["todo_cli"]
omit = ["*/tests/*", "*/__init__.py"]
